--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10,19 +10,14 @@
 }
 
 .customBtn{
-    background-image: linear-gradient(to right, rgb(255, 112, 96),rgb(220, 223, 53));
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    color: black;
     font-weight:900;
     
 }
 .customBtn:hover{
     cursor: pointer;
-    background-image: linear-gradient(270deg, rgb(231, 168, 168),rgb(100,200,200));
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    border-top: white;
+    border-left: white;
     font-weight:900;
     box-shadow: 2px 2px 10px 0px;
 }
@@ -32,4 +27,61 @@
 }
 .finalPath{
     z-index: -1;
+}
+.categories{
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    margin: auto;
+    height: 50vh;
+    width: 80vw;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    transition: all 5s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+.categoryBtn{
+    height: 4.5rem;
+    width: 7rem;
+    font-size: 1.5rem;
+    border-radius: 20px;
+}
+.categoryBtn:hover {
+    border-top: white;
+    border-left: white;
+}
+.gameControl{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    position: relative;
+    left: -100%;
+    transition: left 5s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+body {
+    background:linear-gradient(to left,#ebd93e, #ff743e);
+    animation: color-transition 8s ease-out infinite; /* Animation properties */
+}
+
+@keyframes color-transition {
+    0% {
+        background:linear-gradient(to left,#ebd93e, #ff743e); /* Starting color */
+        background-position: 0 0; /* Starting position */
+    }
+    25% {
+        background:linear-gradient(to right,#ff743e, #ebd93e);
+        background-position: 100% 0;
+    }
+    50% {
+        background:linear-gradient(to top, #ff743e, #ebd93e); 
+        background-position: 100% 100%;
+    }
+    75% {
+        background:linear-gradient(to bottom,#ff743e, #ebd93e); 
+        background-position: 0 100%;
+    }
+    100% {
+        background:radial-gradient(#ebd93e, #ff743e);
+        background-position: 0 0;
+    }
 }
